--- a/css/style.css
+++ b/css/style.css
@@ -232,6 +232,8 @@ border-radius: 16px;
 html, body {
         height: 100%;
         margin: 0px;
+		max-width:100%;
+		overflow-x:hidden;
     }
 .form-control{
 	background-color: #9ba238;
