--- a/res/stylesheet.css
+++ b/res/stylesheet.css
@@ -92,7 +92,7 @@ header {
   margin: 10px 0;
   min-height: 40px;
   padding: 4px 4% 10px;
-  width: 97%;
+  width: 100%;
 }
 #top ul {
 	padding:0;
@@ -427,7 +427,7 @@ footer h5 {
 	background-repeat: repeat-x;
 	border-color: #dddddd #dddddd #b3b3b3 #b7b7b7;
 }
-.btn-primary {
+.btn-primary,.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open .dropdown-toggle.btn-primary {
 	color: #ffffff;
 	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 	background-color: #9BA238;
@@ -550,6 +550,7 @@ footer h5 {
 .product-thumb .image img {
 	margin-left: auto;
 	margin-right: auto;
+	width:100%;
 }
 .product-grid .product-thumb .image {
 	float: none;
@@ -814,6 +815,7 @@ h1, h2, h3, h4, h5, h6{color:#fff;}
   -webkit-border-radius: 5px;
 -moz-border-radius: 5px;
 border-radius: 5px;
+width:100%;
 }
 legend{color:#fff;}
 .hidden{display:none !important}
@@ -881,16 +883,6 @@ legend{color:#fff;}
 	margin: 10px auto;
 	width: 182px;
 }
-
-body {
-	background: url("../img/bg.jpg") no-repeat fixed 0 0 rgba(0, 0, 0, 0);
-	color: #fff;
-	font-family: "Open Sans", sans-serif;
-	font-size: 12px;
-	font-weight: 400;
-	line-height: 20px;
-}
-
 img {
 	max-width: 100%
 }
