--- a/css/style.css
+++ b/css/style.css
@@ -9,13 +9,14 @@
 }
 
 body {
-	background: url("../img/bg.jpg") no-repeat fixed 0 0 rgba(0, 0, 0, 0);
+	background: url("../img/bg.jpg") no-repeat fixed 0 0;
 	color: #fff;
 	font-family: "Open Sans", sans-serif;
 	font-size: 12px;
 	font-weight: 400;
 	line-height: 20px;
 	background-size:cover;
+	background-color:#000;
 }
 
 img {
@@ -243,4 +244,13 @@ html, body {
 .container{
 		overflow-x:hidden;
 		height: 100%;
+}
+.ui-dialog .ui-dialog-titlebar-close {
+position: absolute;
+right: 12px;
+top: 50%;
+width: 23px;
+margin: -10px 0 0 0;
+padding: 1px;
+height: 23px;
 }
